<resources>
    <string name="app_name">AnimalCrossingTools</string>

    <string name="title_activity_main">AnimalCrossingTools</string>

    <string name="settings_theme_title" translation_description="Choose the app theme">Choose theme</string>
    <string name="settings_theme_system" translation_description="Theme option to use the system default">System default</string>
    <string name="settings_theme_light" translation_description="Theme option to use the light theme">Light</string>
    <string name="settings_theme_dark" translation_description="Theme option to use the dark theme">Dark</string>
    <string name="settings_theme_battery" translation_description="Theme option to use which is set by the device Battery Saver feature being enabled">Set by Battery Saver</string>

    <!-- Notificaiton Channel -->
    <string name="notification_channel">Now Playing</string>
    <string name="notification_channel_description">Shows what music is currently playing in UAMP</string>

    <string name="root" translatable="false">/</string>
    <string name="retry">Retry</string>
    <string name="source">Source: %s</string>
    <string name="source_detail">Source Detail: %s</string>
    <string name="houseware_size">Size: %s</string>
    <string name="data_download_policy">Data Download Policy</string>
    <string name="data_usage">Data Usage</string>
    <string name="download_when_empty">Download Data When Cache Is Empty</string>
    <string name="download_always">Always Download Data</string>
    <string name="download_in_time">After Time %1$s</string>
    <string name="fish_catalog">Fish</string>
    <string name="bug_catalog">Bug</string>
    <string name="sea_creature_catalog">SeaCreature</string>
    <string name="fossil_catalog">Fossil</string>
    <string name="song_catalog">Song</string>
    <string name="villager_catalog">Villager</string>
    <string name="art_catalog">Art</string>
    <string name="arts_catalog">Arts</string>
    <string name="furniture_catalog">Furniture</string>
    <string name="found_slash_all">Found/All</string>
    <string name="actived_slash_all">Actived/All</string>
    <string name="donated_slash_all">Donated/All</string>
    <string name="collected_slash_all">Collected/All</string>
    <string name="waiting">waiting</string>
    <string name="numbers_of_fish_select">%1$d Selected</string>
    <string name="numbers_of_bug_select">%1$d Selected</string>
    <string name="numbers_of_seacreature_select">%1$d Selected</string>
    <string name="numbers_of_fossil_select">%1$d Selected</string>
    <string name="numbers_of_song_select">%1$d Selected</string>
    <string name="numbers_of_art_select">%1$d Selected</string>
    <string name="common_search_hint">Search You Want</string>
    <string name="build_date">Build Date: %1$s</string>
    <string name="build_version_hash">Build Version(hash): %1$s</string>
    <string name="settings">Settings</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="choose_resource_language">Choose Resource Language</string>
    <string name="choose_where_you_live">Choose Where You Live</string>
    <string name="choose_timezone">Choose Timezone</string>
    <string name="about">About</string>
    <string name="choose_hemisphere">Choose Hemisphere</string>
    <string name="northern">Northern</string>
    <string name="southern">Southern</string>
    <string name="alert">Alert</string>
    <string name="stun_request_message">Allow Connect To %1$s ?</string>
    <string name="allow">Allow</string>
    <string name="reject">Reject</string>
    <string name="public_ip" >PublicIp</string>
    <string name="error_code">Error Code</string>
    <string name="error_reason">Error Reason</string>
    <string name="nat_type">Nat Type</string>
</resources>
