<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fish.FishFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        app:layout_behavior="com.hxbreak.animalcrossingtools.ui.fish.FishBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.hxbreak.animalcrossingtools.view.ScrollViewGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:tag="pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donated_slash_all"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/textView2"
                        app:layout_constraintEnd_toStartOf="@+id/textView3"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/found_slash_all"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toTopOf="@+id/founded_summary"
                        app:layout_constraintEnd_toStartOf="@+id/textView"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actived_slash_all"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="@+id/textView" />

                    <TextView
                        android:id="@+id/founded_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/waiting"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textView2"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/donated_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waiting"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        app:layout_constraintBottom_toBottomOf="@+id/founded_summary"
                        app:layout_constraintEnd_toEndOf="@+id/textView"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="@+id/founded_summary" />

                    <TextView
                        android:id="@+id/active_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waiting"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        app:layout_constraintBottom_toBottomOf="@+id/donated_summary"
                        app:layout_constraintEnd_toEndOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toTopOf="@+id/donated_summary" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.hxbreak.animalcrossingtools.view.IndexedRecyclerView
                android:id="@+id/recycler_view"
                app:alphabetTextColor="?android:attr/textColorPrimary"
                app:alphabetTextSize="14sp"
                app:indicatorTextColor="@android:color/white"
                app:indicatorBgColor="?attr/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.hxbreak.animalcrossingtools.view.ScrollViewGroup>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            style="@style/AppTheme.Widget.Toolbar"
            android:fitsSystemWindows="true"
            android:id="@+id/toolbar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.hxbreak.animalcrossingtools.view.AnimatedTextView
                android:id="@id/title"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="?attr/colorOnPrimary"
                android:layout_height="56dp"
                android:gravity="center"
                android:layout_width="wrap_content" />

            <com.hxbreak.animalcrossingtools.view.IconView
                android:layout_gravity="right"
                android:layout_marginRight="12dp"
                app:icon1="@drawable/am_edit_to_ok"
                app:icon2="@drawable/am_ok_to_edit"
                android:id="@+id/edit_mode"
                android:scaleType="centerInside"
                android:layout_width="42dp"
                android:layout_height="?attr/actionBarSize"/>

            <com.hxbreak.animalcrossingtools.view.IconView
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:visibility="invisible"
                app:icon1="@drawable/am_invisible_to_visible"
                app:icon2="@drawable/am_visible_to_invisible"
                android:id="@+id/found"
                android:tooltipText="Mark Founded"
                android:scaleType="centerInside"
                android:layout_width="42dp"
                android:layout_height="?attr/actionBarSize" />


            <com.hxbreak.animalcrossingtools.view.IconView
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:visibility="invisible"
                app:icon2="@drawable/am_none_to_mark"
                app:icon1="@drawable/am_mark_to_none"
                android:tooltipText="Mark Donated"
                android:id="@+id/donate"
                android:scaleType="centerInside"
                android:layout_width="42dp"
                android:layout_height="?attr/actionBarSize"/>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ViewStub
        android:id="@+id/bottom_sheet_viewstub"
        app:behavior_hideable="true"
        app:elevation="8dp"
        app:behavior_peekHeight="144dp"
        android:layout="@layout/bottom_sheet_fish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/bottom_sheet_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

