<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    tools:context=".ui.fish.FishFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.hxbreak.animalcrossingtools.view.CommonStatusGroup
            android:id="@+id/common_layout"
            app:errorLayout="@layout/layout_error"
            app:emptyLayout="@layout/layout_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.hxbreak.animalcrossingtools.view.ScrollViewGroup
                android:id="@+id/scrollContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:tag="pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/donated_slash_all"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            app:layout_constraintBottom_toBottomOf="@+id/textView2"
                            app:layout_constraintEnd_toStartOf="@+id/textView3"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/textView2"
                            app:layout_constraintTop_toTopOf="@+id/textView2" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:visibility="invisible"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/found_slash_all"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            app:layout_constraintBottom_toTopOf="@+id/founded_summary"
                            app:layout_constraintEnd_toStartOf="@+id/textView"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="invisible"
                            android:text="@string/actived_slash_all"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            app:layout_constraintBottom_toBottomOf="@+id/textView"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/textView"
                            app:layout_constraintTop_toTopOf="@+id/textView" />

                        <TextView
                            android:id="@+id/founded_summary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="16dp"
                            android:text="1/99"
                            android:visibility="invisible"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/textView2"
                            app:layout_constraintStart_toStartOf="@+id/textView2"
                            app:layout_constraintTop_toBottomOf="@+id/textView2" />

                        <TextView
                            android:id="@+id/donated_summary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            app:layout_constraintBottom_toBottomOf="@+id/founded_summary"
                            app:layout_constraintEnd_toEndOf="@+id/textView"
                            app:layout_constraintStart_toStartOf="@+id/textView"
                            app:layout_constraintTop_toTopOf="@+id/founded_summary" />

                        <TextView
                            android:id="@+id/active_summary"
                            android:layout_width="wrap_content"
                            android:visibility="invisible"
                            android:layout_height="wrap_content"
                            android:text="TextView"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            app:layout_constraintBottom_toBottomOf="@+id/donated_summary"
                            app:layout_constraintEnd_toEndOf="@+id/textView3"
                            app:layout_constraintStart_toStartOf="@+id/textView3"
                            app:layout_constraintTop_toTopOf="@+id/donated_summary" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    tools:listitem="@layout/item_fish"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.hxbreak.animalcrossingtools.view.ScrollViewGroup>

        </com.hxbreak.animalcrossingtools.view.CommonStatusGroup>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            app:title="Arts"
            app:titleEnabled="true"
            android:fitsSystemWindows="true"
            android:id="@id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:layout_scrollFlags="scroll|snap|enterAlways"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.hxbreak.animalcrossingtools.view.AnimatedTextView
                android:id="@id/title"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="?attr/colorOnPrimary"
                android:layout_height="56dp"
                android:gravity="center"
                android:layout_width="wrap_content" />

            <com.hxbreak.animalcrossingtools.view.IconView
                android:layout_gravity="end"
                android:layout_marginEnd="12dp"
                app:icon1="@drawable/am_edit_to_ok"
                app:icon2="@drawable/am_ok_to_edit"
                android:id="@+id/edit_mode"
                android:scaleType="centerInside"
                android:layout_width="42dp"
                android:layout_height="?attr/actionBarSize" />

            <com.hxbreak.animalcrossingtools.view.IconView
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:visibility="invisible"
                app:icon2="@drawable/am_none_to_mark"
                app:icon1="@drawable/am_mark_to_none"
                android:tooltipText="Mark Donated"
                android:id="@+id/donate"
                android:scaleType="centerInside"
                android:layout_width="42dp"
                android:layout_height="?attr/actionBarSize" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>